ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a67da7054d9bf45b294aae7cf0dde3ec-853271565.sa-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service1
            port:
              number: 80
      - path: /mobile
        pathType: Prefix
        backend:
          service:
            name: my-service2
            port:
              number: 80
      - path: /desktop
        pathType: Prefix
        backend:
          service:
            name: my-service3
            port:
              number: 80
